--- a/src/routes/Home/components/style.css
+++ b/src/routes/Home/components/style.css
@@ -70,7 +70,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 18px 10px;
+    padding: 18px 40px;
 }
 
 .flex-box-left {
@@ -78,5 +78,6 @@
     flex-direction: row;
     justify-content: left;
     align-items: center;
-    padding: 0 0 0 50px;
+    padding-left: 50px;
+    margin-top: -20px;
 }
